--- a/relatorio5/relatorio5.tex
+++ b/relatorio5/relatorio5.tex
@@ -278,14 +278,13 @@ end div_4_5_imp;
             \textbf{Modelo}         & \textbf{Frequência (GHz)} \\  \hline
             \emph{LeonardoSpectrum} --
               \emph{Critical Path}  &        1,04               \\  \hline
-            Simulação (MC = "1")    &        0,92               \\  \hline
-            Simulação (MC = "0")    &        0,91               \\  \hline
+            Simulação (MC = 1)    &        0,92               \\  \hline
+            Simulação (MC = 0)    &        0,91               \\  \hline
 
         \end{tabular}
     \end{table}
 
-    \img{Máxima frequência de operação para \verb:MC = "0":}{imgQ19maxFreqMCbaixo}
-    \img{Máxima frequência de operação para \verb:MC = "1":}{imgQ19maxFreqMCalto}
-\bigskip
+    \img{Máxima frequência de operação para MC = 0}{imgQ19maxFreqMCbaixo}
+    \img{Máxima frequência de operação para MC = 1}{imgQ19maxFreqMCalto}
 
 \end{document}
