--- a/relatorio6/relatorio6.tex
+++ b/relatorio6/relatorio6.tex
@@ -1,109 +1,107 @@
+\include{preambulo}
+
 \begin{document}
 
-                                  Projeto 6
+\renewcommand{\titulo}{Projeto 11}
+\pagenumbering{arabic}
+\makecover
+\makelists
 
+\section*{Resumo}
 
-            Projeto de Circuitos Integrados Digitais (out./2014)
-
+\section*{Introdução}
 
    O objetivo deste projeto é trabalhar com alguns circuitos em VHDL e
 explorar hierarquias. Também será visto o ModelSim para simulação de VHDL.
 
-\textbf{1.}Considere o circuito prescaler da Figura 1.
+\textbf{1.} Considere o circuito prescaler da \fref{imgQ01prescaler}.
 
+  \img{Prescaler 32/33.}{imgQ01prescaler}
 
+  O circuito composto pelos blocos não hachurados (três \emph{D-flip flops}
+e o \verb:NAND: de quatro entradas) compõe um contador assíncrono de 0 até 7
+(conta 8). O circuito pode ser visto como tendo dois sinais de entrada (os
+sinais \verb:SM: e um \verb:clock:) e dois sinais de saída (os sinais \verb:MC:
+e \verb:saída:). A saída \verb:MC: é igual a ``0'' apenas quando SM = ``1''
+e o contador esta no ``0'' da contagem. O sinal saída é o clock dividido por 8.
 
-
-
-
-
-
-
-
-
-
-                         Figura 1. Prescaler 32/33.
-  O circuito composto pelos blocos não hachurados (três D-flip flops e o
-NAND de quatro entradas) compõe um contador assíncrono de 0 até 7 (conta
-8). O circuito pode ser visto como tendo dois sinais de entrada (os sinais
-SM e um clock) e dois sinais de saída (os sinais MC e saída). A saída MC é
-igual a "0" apenas quando SM = "1" e o contador esta no "0" da contagem. O
-sinal saída é o clock dividido por 8.
-
-\textbf{2.}* Descreva o contador assíncrono em VHDL (não fazer a descrição
+\textbf{2.}* Descreva o contador assíncrono em \emph{VHDL} (não fazer a descrição
    estrutural que repete o esquemático, mas sim em alto nível). Utilize o
-   manual de VHDL do software Leonardo (LeonardoSpectrum HDL Synthesis
-   Manual (D:\MGC\LeoSpec\LS2005a_82\doc)) para ver modelos se necessário.
+   manual de \emph{VHDL} do \emph{software} Leonardo (\emph{LeonardoSpectrum HDL
+   Synthesis Manual}) para ver modelos se necessário.
 
-\textbf{3.}* Simule no ModelSim o circuito e verifique seu funcionamento. Para
-   isso:
-  crie uma pasta de trabalho, work, caso ainda não tenha feito;
-  compile o seu VHDL;
-  inicie a simulação, Simule > Start Simulation. Caso não sejam abertas
-    as janelas de wave e objetcs, abri-las via comandos View - Wave e View
-    - Objects.
-  crie os sinais de entrada (na janela de Objects, Create Wave);
-  coloque na janela waves os sinais de saída que deseja ver ("arraste" os
-    sinais de uma janela a outra);
-  execute a simulação.
+\textbf{3.}* Simule no \emph{ModelSim} o circuito e verifique seu funcionamento.
+  Para isso:
+  \begin{itemize}
+    \item crie uma pasta de trabalho, \emph{work}, caso ainda não tenha feito;
+    \item compile o seu \emph{VHDL};
+    \item inicie a simulação, \emph{Simule > Start Simulation}. Caso não sejam
+      abertas as janelas de \emph{wave} e \emph{objetcs}, abri-las via comandos
+      \emph{View - Wave} e \emph{View - Objects}.
+    \item crie os sinais de entrada (na janela de \emph{Objects}, \emph{Create Wave});
+    \item coloque na janela \emph{waves} os sinais de saída que deseja ver
+      (``arraste'' os sinais de uma janela a outra);
+    \item execute a simulação.
+  \end{itemize}
 
-  Apresente o resultado gráfico da simulação
+  Apresente o resultado gráfico da simulação.
 
-\textbf{4.}Carregue o circuito VHDL, sintetize e otimize para delay utilizando a
-   biblioteca da AMS.
+\textbf{4.}Carregue o circuito \emph{VHDL}, sintetize e otimize para \emph{delay}
+  utilizando a biblioteca da \emph{AMS}.
 
-\textbf{5.}*Compare a implementação feita no Leonardo com a da Fig. 1. Qual é a
-   maior diferença?
+\textbf{5.}*Compare a implementação feita no \emph{Leonardo} com a da
+  \fref{imgQ01prescaler}. Qual é a maior diferença?
 
 \textbf{6.}*Verifique o caminho crítico e estime a máxima frequência de operação
    que este circuito pode atingir (apresente a figura com caminho critico).
 
-\textbf{7.}*Apresente no relatório o VHDL e o esquemático final que obteve.
+\textbf{7.}*Apresente no relatório o \emph{VHDL} e o esquemático final que obteve.
 
-\textbf{8.}*Exporte o circuito gerado para o ICStation e gere o esquemático. A
-   partir do esquemático extraia o circuito para simulação e determine a
-   máxima frequência de operação.
+\textbf{8.}*Exporte o circuito gerado para o \emph{ICStation} e gere o esquemático.
+  A partir do esquemático extraia o circuito para simulação e determine a máxima
+  frequência de operação.
 
-\textbf{9.}Faça o placement automático das células. Dentro do menu Place & Route
-   utilize os comando MvOnRw (move on row) e MvInRow (move into rows) para
-   reposicionar as células para melhorar o layout.
+\textbf{9.}Faça o \emph{placement} automático das células. Dentro do menu
+  \emph{Place \& Route} utilize os comando \emph{MvOnRw (move on row)} e
+  \emph{MvInRow (move into rows)} para reposicionar as células para melhorar
+  o \emph{layout}.
 
 \textbf{10.} *Faça o roteamento das células sem usar poli (utilize no roteamento do
-   VDD e do VSS linhas de $1,8 \mu m$. Qual é a máxima corrente que pode passar
-   pela alimentação nesse caso?).
+   \verb:VDD: e do \verb:VSS: linhas de $1,8 \mu m$. Qual é a máxima corrente que
+   pode passar pela alimentação nesse caso?).
 
-\textbf{11.} *Coloque os ports, passe o DRC, elimine os erros e faça o LVS.
-   Apresente o layout obtido no relatório.
+\textbf{11.} *Coloque os \emph{ports}, passe o \emph{DRC}, elimine os erros e faça
+  o LVS. Apresente o \emph{layout} obtido no relatório.
 
-\textbf{12.} *Simule o circuito extraído do layout (R+C+CC) e determine sua máxima
-   velocidade.
+\textbf{12.} *Simule o circuito extraído do \emph{layout} (\verb:R+C+CC:) e determine
+  sua máxima velocidade.
 
 \textbf{13.} *Compare os resultados de velocidade obtidos nas questões 6, 8 e 12.
 
-\textbf{14.} *Com os dois blocos já escritos em VHDL, contador 4/5 e contador 8,
-   monte o Prescaler completo VHDL (agora descrevendo um bloco conectado ao
-   outro). Apresente o VHDL.
+\textbf{14.} *Com os dois blocos já escritos em \emph{VHDL}, contador 4/5 e contador
+  8, monte o \emph{Prescaler} completo \emph{VHDL} (agora descrevendo um bloco conectado
+  ao outro). Apresente o \emph{VHDL}.
 
-\textbf{15.} *Simule no ModelSim o circuito e verifique seu funcionamento. Apresente
-   os resultados gráficos da simulação.
+\textbf{15.} *Simule no \emph{ModelSim} o circuito e verifique seu funcionamento.
+  Apresente os resultados gráficos da simulação.
 
 \textbf{16.} Faça a síntese e teste duas possibilidades disponíveis no Leonardo:
-   mantendo a hierarquia e flat (apresente os esquemáticos)
+   mantendo a hierarquia e \emph{flat} (apresente os esquemáticos)
 
-\textbf{17.} *Verifique, para o caso flat, qual é o caminho critico (apresente a
-   figura com caminho critico e indique no esquemático completo onde ele
+\textbf{17.} *Verifique, para o caso \emph{flat}, qual é o caminho critico (apresente
+  a figura com caminho crítico e indique no esquemático completo onde ele
    está). Está correto?
 
-\textbf{18.} Para os dois casos exporte o circuito para o ICStation.
+\textbf{18.} Para os dois casos exporte o circuito para o \emph{ICStation}.
 
 \textbf{19.} *Gere o esquemático em cada caso (deixe-os em bibliotecas diferentes).
    Qual é a diferença em cada caso? Quando é interessante usar um ou outro?
 
-\textbf{20.} *A partir do esquemático com hierarquia, monte o layout do prescaler
-   completo (aproveite os layouts já feitos). Passe o DRC e faça o LVS.
-   Apresente o layout obtido no relatório.
+\textbf{20.} *A partir do esquemático com hierarquia, monte o \emph{layout} do
+  prescaler completo (aproveite os \emph{layouts} já feitos). Passe o DRC e faça
+  o \emph{LVS}. Apresente o \emph{layout} obtido no relatório.
 
-\textbf{21.} *Extraia o circuito (R+C+CC), determine a máxima velocidade de operação
-   e, nessa velocidade, determine a razão (potência consumida)/GHz.
-   Determine também a área do circuito.[pic]
+\textbf{21.} *Extraia o circuito (\verb:R+C+CC:), determine a máxima velocidade de
+  operação e, nessa velocidade, determine a razão (potência consumida)/GHz. Determine
+  também a área do circuito.
 \end{document}
