--- a/relatorio6/relatorio6.tex
+++ b/relatorio6/relatorio6.tex
@@ -168,9 +168,10 @@ resultados obtidos na simulação do \emph{layout} é a mais confiável. \\
 \textbf{15.} *Simule no \emph{ModelSim} o circuito e verifique seu funcionamento.
   Apresente os resultados gráficos da simulação.
 
-  O resultado da simulação se encontra na \fref{imgQ15simulation}.
+  O resultado das simulações encontram-se nas \fref{imgQ15simulationSMalto}, \fref{imgQ15simulationSMbaixo}.
 
-  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo}{imgQ15simulation} % TODO adicionar figura
+  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '1'}{imgQ15simulationSMalto} % TODO adicionar figura
+  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '0'}{imgQ15simulationSMbaixo} % TODO adicionar figura
 \bigskip
 
 \textbf{16.} Faça a síntese e teste duas possibilidades disponíveis no Leonardo:
