Adicionadas algumas imagens

--- a/relatorio6/relatorio6.tex
+++ b/relatorio6/relatorio6.tex
@@ -58,7 +58,7 @@ e o contador esta no ``0'' da contagem. O sinal saída é o clock dividido por 8.
 
   O resultado da simulação se encontra na \fref{imgQ03simulation}.
 
-  \img{Simulação no \emph{ModelSim} do divisor por 8}{imgQ03simulation} % TODO adicionar imagem
+  \img{Simulação no \emph{ModelSim} do divisor por 8}{imgQ03simulation}
 \bigskip
 
 \textbf{4.}Carregue o circuito \emph{VHDL}, sintetize e otimize para \emph{delay}
@@ -78,14 +78,14 @@ enquanto a feita em VHDL gerada pelo \emph{LeonardoSpectrum} (antes de ser otimi
   O caminho crítico está representado na \fref{imgQ06criticalPath}. Como o atraso
 do circuito é de $1,19 ns$ sua máxima frequência de operação será $0,84 GHz$.
 
-  \img{Caminho crítico gerado pelo \emph{LeonardoSpectrum} do divisor por 8}{imgQ06criticalPath} % TODO adicionar figura
+  \img{Caminho crítico gerado pelo \emph{LeonardoSpectrum} do divisor por 8}{imgQ06criticalPath}
 \bigskip
 
 \textbf{7.}*Apresente no relatório o \emph{VHDL} e o esquemático final que obteve.
 
   O esquemático do circuito está representado na \fref{imgQ07esquematico}.
 
-  \img{Esquemático gerado pelo \emph{LeonardoSpectrum} do divisor por 8}{imgQ07esquematico} % TODO adicionar figura
+  \img{Esquemático gerado pelo \emph{LeonardoSpectrum} do divisor por 8}{imgQ07esquematico}
 \bigskip
 
 \textbf{8.}*Exporte o circuito gerado para o \emph{ICStation} e gere o esquemático.
@@ -96,8 +96,8 @@ do circuito é de $1,19 ns$ sua máxima frequência de operação será $0,84 GHz$.
   Assim como mostra o gráfico da \fref{imgQ08maxFreq}, a máxima frequência de
 operação é $1,10 GHz$.
 
-  \img{Esquemático gerado no \emph{ICStation} do divisor por 8}{imgQ08esquematico} % TODO adicionar figura
-  \img{Máxima frequência de operação}{imgQ08maxFreq} % TODO adicionar figura
+  \img{Esquemático gerado no \emph{ICStation} do divisor por 8}{imgQ08esquematico}
+  \img{Máxima frequência de operação}{imgQ08maxFreq}
 \bigskip
 
 \textbf{9.}Faça o \emph{placement} automático das células. Dentro do menu
@@ -117,7 +117,7 @@ operação é $1,10 GHz$.
 
   O \emph{layout} do circuito está representado na \fref{imgQ11layout}.
 
-  \img{\emph{Layout} do circuito divisor por 8}{imgQ11layout} % TODO adicionar figura
+  \img{\emph{Layout} do circuito divisor por 8}{imgQ11layout}
 \bigskip
 
 \textbf{12.} *Simule o circuito extraído do \emph{layout} (\verb:R+C+CC:) e determine
@@ -126,7 +126,7 @@ operação é $1,10 GHz$.
   Assim como mostra o gráfico da \fref{imgQ12maxFreq}, a máxima frequência de
 operação é $0,77 GHz$.
 
-  \img{Máxima frequência de operação (\verb:R+C+CC:)}{imgQ12maxFreq} % TODO adicionar figura
+  \img{Máxima frequência de operação (\verb:R+C+CC:)}{imgQ12maxFreq}
 \bigskip
 
 \textbf{13.} *Compare os resultados de velocidade obtidos nas questões 6, 8 e 12.
@@ -170,8 +170,8 @@ resultados obtidos na simulação do \emph{layout} é a mais confiável. \\
 
   O resultado das simulações encontram-se nas \fref{imgQ15simulationSMalto}, \fref{imgQ15simulationSMbaixo}.
 
-  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '1'}{imgQ15simulationSMalto} % TODO adicionar figura
-  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '0'}{imgQ15simulationSMbaixo} % TODO adicionar figura
+  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '1'}{imgQ15simulationSMalto}
+  \img{Simulação no \emph{ModelSim} do \emph{Prescaler} completo, SM = '0'}{imgQ15simulationSMbaixo}
 \bigskip
 
 \textbf{16.} Faça a síntese e teste duas possibilidades disponíveis no Leonardo:
@@ -179,8 +179,8 @@ resultados obtidos na simulação do \emph{layout} é a mais confiável. \\
 
   As duas possibilidades de esquemático estão representadas nas \fref{imgQ16esquematico1} e \fref{imgQ16esquematico2}.
 
-  \img{Esquemático do circuito, modelo 1}{imgQ16esquematico1} % TODO adicionar figura
-  \img{Esquemático do circuito, modelo 2}{imgQ16esquematico2} % TODO adicionar figura
+  \img{Esquemático do circuito, modelo hierarquico}{imgQ16esquematico1}
+  \img{Esquemático do circuito, modelo \emph{flat}}{imgQ16esquematico2}
 \bigskip
 
 \textbf{17.} *Verifique, para o caso \emph{flat}, qual é o caminho critico (apresente
