--- a/relatorio6/relatorio6.tex
+++ b/relatorio6/relatorio6.tex
@@ -229,8 +229,9 @@ end prescaler_32_33_imp;
   a figura com caminho crítico e indique no esquemático completo onde ele
    está). Está correto?
 
-    O caminho crítico está representado na \fref{imgQ17criticalPath}. Como o atraso
-do circuito é de $xXX ns$ sua máxima frequência de operação será $XXX GHz$. % TODO colocar os valores
+    O caminho crítico está representado na \fref{imgQ17criticalPath} e na
+\fref{imgQ17criticalPathAll}. Como o atraso do circuito é de $1,27 ns$ sua máxima
+frequência de operação será $0,787 GHz$.
 
   \img{Caminho crítico gerado pelo \emph{LeonardoSpectrum} do \emph{Prescaler} completo}{imgQ17criticalPath}
 \bigskip
