--- a/relatorio8/relatorio8.tex
+++ b/relatorio8/relatorio8.tex
@@ -100,15 +100,15 @@
 
 \textbf{8.} Considere que o sinal de \emph{clock} da entrada apresente tempos de subida/descida de cerca de 30\% do seu período. Nessa situação o circuito continua funcionando? Caso não, qual é a razão?
 
-  % TODO
-  Utilizando a configuração com tempos de subida e descida de 30\% do período do \emph{clock}, o circuito para de funcionar. Uma provável 
+  Utilizando a configuração com tempos de subida e descida de 30\% do período do \emph{clock}, o circuito para de funcionar. A razão disto é que os transistores N e P das chaves acabam conduzindo ao mesmo tempo, o que faz com que o \emph{flip-flop} não funcione direito.
 
 \bigskip
 
 \textbf{9.} Se necessário arrume o problema encontrado no \textbf{item 8}. Com o sinal de relógio como acima, tempos de subida/descida de cerca de 30\% do período, determine a nova potência consumida.
 
-  % TODO
-  Uma solução possível para o problema é colocar inversores na entrada do circuito, pois eles diminuem os tempo de subida e descida relativos ao período.
+  Uma solução possível para o problema é colocar inversores na entrada do circuito, pois eles diminuem os tempo de subida e descida relativos ao período. Esse resultado pode ser observado na \fref{imgQ09frequencia}.
+
+  \img{Inversor influenciando nos tempos de subida e descida}{imgQ09frequencia} % TODO
 
 \bigskip
 
